[B]0.9.25[/B]
VIEWTYPES - Add Square Wall Large
MYPLAYLIST - Adapt side poster/cover depending on listitem dbtype
SKINSETTINGS - Move Monochrome flags option to Colors menu
HOME - Add focus bump when pressing up from submenu and categories widget disabled
SKINSETTINGS/MISCELLANEOUS - Force extendedinfo to open when pressing info
WIDGETS - Add top250 number for top250 widgets
RATINGS - Disable votes by default. Option to re-enable in Skin Settings.

[B]0.9.24[/B]
LEIA - VIDEOOSD - Subtitles button opens subtitles menu
DIALOGSUBTITLES - Fix filename length and scroll
SKINSETTINGS/LIBRARY - Show media flags instead of ratings
SKINSETTINGS/LIBRARY - Monochrome flags
PLAYLIST - Add braz's playlist code
DIALOGADDONINFO - Change Enable/Disable text to Enabled/Disabled to match icons

[B]0.9.23[/B]
Fix musicplaylist

[B]0.9.22[/B]
New icons added
Widget code changes
Add sort letter on scrolling
Add page and item numbers on scrollbar
Add uninstall icon in addon info
Fix missing album cover icon
Fix scrollbar ids for non library views

[B]0.9.21[/B]
Fix musicvideo info
HDR Flag
Option to disable pressing up from menu
Keyboard improvements (thanks loggio!)

[B]0.9.20[/B]
LEIA - Fix for artwork helper on home screen
LEIA - Add extra download art icon
LEIA - Update artwork helper vars (thanks Guilouz!)
LEIA - Fix artwork helper vars
Fix screen calibration bug
Tweak EPG grid

[B]0.9.19[/B]
LEIA - Add artwork beef artwork helper support in videoinfodialog
LEIA - Add support for artwork beef artwork helper for extrafanart
Fix settings widget focus text
Fix settings labels
Cycle time of extrafanart reduced to 7 seconds
Lowercase text in epg
Show start/end time in epg when genre name disabled

[B]0.9.18[/B]
LEIA - Fix some PVR recording and some infolabels
Plot overlay delay option
Add PVR default widget options
Add PVR landscape text to check for channelname
Fix for pvr end time
Fix for shadowspot on volumebar
Add Episode List view
Autoclose OSD option

[B]0.9.17[/B]