@@ -1017,8 +1017,8 @@
                 </control>
                 <control type="group">
                     <width>1000</width>
-                    <left>32</left>
-                    <height>33</height>
+                    <left>28</left>
+                    <height>32</height>
                     <centertop>50%</centertop>
                     <visible>$PARAM[ratings]</visible>
                     <control type="group">
