@@ -1,3 +1,6 @@
+[B]0.9.26[/B]
+VIEWTYPES - Fix for Big Posters with Codec Info on
+
 [B]0.9.25[/B]
 VIEWTYPES - Add Square Wall Large
 MYPLAYLIST - Adapt side poster/cover depending on listitem dbtype
